HV-1914 Test against JDK 20 (early access)